stopped the div from move out of the container. added a platform div and set flexbox to center the div

--- a/style.css
+++ b/style.css
@@ -1,11 +1,18 @@
+#platform{
+    display: flex;
+    border: 1px solid black;
+    justify-content: center;
+
+}
 #container{
-    width: 1300px;
-    height: 800px;
+    width: 800px;
+    height: 700px;
     border: 1px solid black;
 }
 #player{
     width: 100px;
     height: 100px;
     border: 1px solid black;
-    position:relative
+    position:relative;
+    background-color:red
 }
